style: fix margin-top so page titles are visible

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,7 @@
  */
 
  body {
-   margin: 0;
+   margin: 5% 0 0 0;
    background-color: #fafafa;
    font-family: 'Roboto', sans-serif;
  }
